[package]
name = "rust-linked-list"
version = "0.1.0"
edition = "2021"
authors = ["snake"]
description = "Rust implementation of various linked list data structures"
license = "MIT"
repository = "https://github.com/snake/rust-linked-list"

[dev-dependencies]
criterion = "0.5"  # 用于基准测试

[dependencies]
derive-new = "0.7"